# prime-rl

./: Dockerfile.cuda  README.md  pyproject.toml
.github/workflows/: cpu_tests.yaml
configs/: README.md
configs/basic/alphabet-sort/: README.md  rl.toml
configs/basic/hendrycks-sanity/: README.md  rl.toml
configs/basic/reverse-text/: README.md  rl.toml  sft.toml
configs/basic/wiki-search/: README.md  rl.toml
configs/basic/wordle/: README.md  rl.toml  sft.toml
configs/ci/: slim_sft.toml
configs/ci/integration/reverse-text/: resume.toml  start.toml
configs/ci/integration/reverse-text-lora/: resume.toml  start.toml
configs/ci/integration/reverse-text-moe/: start.toml
configs/ci/integration/reverse-text-multi-run/: inference.toml  orchestrator.toml  trainer.toml
configs/ci/integration/reverse-text-rl-opd/: start.toml
configs/ci/integration/reverse-text-rl-sft/: start.toml
configs/ci/integration/reverse-text-sft/: resume.toml  start.toml
configs/ci/integration/reverse-text-sft-lora/: resume.toml  start.toml
configs/ci/nightly/: multimodal_color_codeword.toml
configs/debug/algo/: README.md  echo.toml  grpo.toml  max_rl.toml  mixed_grpo_opd.toml  opd.toml  opd_lora.toml  self_distill.toml  sft_distill.toml  sft_distill_lora.toml
configs/debug/fake/: rl.toml  sft.toml
docs/: advanced.md  algorithms.md  configuration.md  development.md  inference.md  mint.json  overview.md  scaling.md  training.md
examples/: README.md
examples/advanced/glm-4.5-air/: search.toml  swe.toml  terminal.toml
examples/advanced/glm-5.2/: swe-llmd.toml  swe.toml
examples/advanced/glm-5.2/infer/: pd-llmd.toml  pd.toml
examples/advanced/intellect-3.1/: rl.toml
examples/advanced/minimax-m2.5/: swe.toml
examples/advanced/nemotron-3-super/: swe.toml
examples/advanced/qwen3-30b-a3b/: math.toml  swe.toml  tool.toml
examples/basic/alphabet-sort/: README.md  rl.toml
examples/basic/hendrycks-sanity/: README.md  rl.toml
examples/basic/reverse-text/: README.md  rl.toml  sft.toml
examples/basic/wiki-search/: README.md  rl.toml
examples/basic/wordle/: README.md  rl.toml  sft.toml
examples/vlm_sft/: sft.toml
examples/vlm_sft_moe/: sft.toml
k8s/: README.md
k8s/prime-rl/: values.yaml
k8s/prime-rl/examples/: reverse-text.yaml
k8s/prime-rl/examples/reverse-text/: infer.toml  orch.toml  train.toml
skills/configs/: SKILL.md
skills/install/: SKILL.md
skills/training/monitor-run/: SKILL.md
skills/training/start-run/: SKILL.md
src/prime_rl/entrypoints/: inference.py  rl.py  sft.py
src/prime_rl/templates/: inference.sbatch.j2  multi_node_rl.sbatch.j2  multi_node_sft.sbatch.j2  single_node_rl.sbatch.j2  single_node_sft.sbatch.j2
src/prime_rl/trainer/: ckpt.py  lora.py  model.py
src/prime_rl/trainer/models/: __init__.py
src/prime_rl/trainer/models/afmoe/: modeling_afmoe.py
src/prime_rl/trainer/models/glm4_moe/: modeling_glm4_moe.py
src/prime_rl/trainer/models/glm_moe_dsa/: modeling_glm_moe_dsa.py
src/prime_rl/trainer/models/gpt_oss/: modeling_gpt_oss.py
src/prime_rl/trainer/models/laguna/: modeling_laguna.py
src/prime_rl/trainer/models/layers/: lm_head.py
src/prime_rl/trainer/models/llama/: modeling_llama.py
src/prime_rl/trainer/models/minimax_m2/: modeling_minimax_m2.py
src/prime_rl/trainer/models/nemotron_h/: modeling_nemotron_h.py
src/prime_rl/trainer/models/qwen3/: modeling_qwen3.py
src/prime_rl/trainer/models/qwen3_5/: modeling_qwen3_5.py
src/prime_rl/trainer/models/qwen3_5_moe/: modeling_qwen3_5_moe.py
src/prime_rl/trainer/models/qwen3_moe/: modeling_qwen3_moe.py
src/prime_rl/trainer/rl/: train.py
src/prime_rl/trainer/sft/: data.py  train.py
src/prime_rl/utils/: cp.py  sequence.py  uv.py
tests/integration/: test_alphabet_sort.py  test_reverse_text.py  test_reverse_text_lora.py  test_reverse_text_moe.py  test_reverse_text_multi_run.py  test_reverse_text_rl_opd.py  test_reverse_text_rl_sft.py  test_reverse_text_sft.py  test_reverse_text_sft_lora.py
tests/nightly/: test_alphabet_sort.py  test_hendrycks_sanity.py  test_reverse_text.py  test_wiki_search.py  test_wordle.py
tests/unit/: test_configs.py  test_rl_entrypoint.py
tests/unit/train/models/: test_nemotron_h.py  test_qwen3_5.py  test_qwen3_5_moe.py  test_qwen3_5_moe_vlm.py
tests/unit/train/sft/: test_sft_dataset.py
tests/unit/utils/: test_sequence.py  test_uv.py
